Incluimos script, su primera version

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
             <p>Web para el apartado 2.2 de la practica 1</p>
             <div>
                 Pulsa el boton inutil
-                <button> BOTON INUTIL </button>
+                <button onclick="mostrarAlerta()"> BOTON INUTIL </button>
             </div>
         </center>
+        <script src="script.js"></script>
     </body>
 </html>
