API de OMBD integrada en mi WEB

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
             <div>
                 Pulsa el boton inutil
                 <button onclick="mostrarAlerta()"> BOTON INUTIL </button>
+                <form id="formId">
+                    <input type="text" id="inTitulo" placeholder="Introduce el titulo de la pelicula">
+                    <button type="submit" id="inSubmit"> BUSCAR </button>
+                </form>
+            </div>
+            <div id="muestrario">
+
             </div>
         </center>
         <script src="script.js"></script>
